--- a/Public/Exceptions.plist
+++ b/Public/Exceptions.plist
@@ -5,125 +5,23 @@
 	<key>Cinamon</key>
 	<dict>
 		<key>title</key>
-		<dict>
-			<key>Baltų gentys. Paskutinieji Europos pagonys</key>
-			<string>Baltų gentys</string>
-		</dict>
+		<dict/>
 		<key>originalTitle</key>
-		<dict>
-			<key>Baltu Ciltis/Eiropas pēdējie pagāni</key>
-			<string>Baltu Ciltis</string>
-			<key>Emma</key>
-			<string>Emma.</string>
-		</dict>
+		<dict/>
 	</dict>
 	<key>ForumCinemas</key>
 	<dict>
 		<key>title</key>
-		<dict>
-			<key> Specialus seansas:</key>
-			<string></string>
-			<key> (įgarsinta lietuviškai)</key>
-			<string></string>
-			<key>COSMOPOLITAN kino vakaras: </key>
-			<string></string>
-			<key>Pamatyk pirmas: artėjančio „Kino pavasario“ filmas „Nematomas gyvenimas“</key>
-			<string>Nematomas gyvenimas</string>
-			<key>Japonijos kino festivalis 2020: </key>
-			<string></string>
-			<key>Power Hit Radio pristato: </key>
-			<string></string>
-			<key>Baltų gentys. Paskutinieji Europos pagonys</key>
-			<string>Baltų gentys</string>
-			<key> (rusų k.)</key>
-			<string></string>
-			<key> (specialusis seansas originalo kalba)</key>
-			<string></string>
-			<key>LNK Kino Startas: </key>
-			<string></string>
-			<key>TAVO VAIKAS premjera: </key>
-			<string></string>
-			<key> (dubliuotas)</key>
-			<string></string>
-			<key> 3D</key>
-			<string></string>
-		</dict>
+		<dict/>
 		<key>originalTitle</key>
-		<dict>
-			<key>Special screening:</key>
-			<string></string>
-			<key> (Lithuanian voice-over)</key>
-			<string></string>
-			<key>COSMOPOLITAN premiere: </key>
-			<string></string>
-			<key>Japonijos kino festivalis 2020: </key>
-			<string></string>
-			<key>KP20: </key>
-			<string></string>
-			<key>FIKSIKI PROTIV KRABOTOV</key>
-			<string>Fiksiki protiv Krabotov</string>
-			<key>Baltic Tribes. The Last Pagans of Europe</key>
-			<string>Baltu Ciltis</string>
-			<key>Power Hit Radio pristato: </key>
-			<string></string>
-			<key>Harley Quinn: Birds of Prey</key>
-			<string>Birds of Prey</string>
-			<key>Brahms: The Boy 2</key>
-			<string>Brahms: The Boy II</string>
-			<key>LOD 2</key>
-			<string>Ice 2</string>
-			<key>Strazhi Arktiki</key>
-			<string>Arctic Dogs</string>
-			<key>Frozen 2</key>
-			<string>Frozen II</string>
-			<key>Celle que vous croyez</key>
-			<string>Who You Think I Am</string>
-			<key> (OV)</key>
-			<string></string>
-			<key>LNK Kino Startas: </key>
-			<string></string>
-			<key>LNK premiere: </key>
-			<string></string>
-			<key>Normalios bobos eina OUT: </key>
-			<string></string>
-			<key>TAVO VAIKAS premiere: </key>
-			<string></string>
-			<key> (dubbed)</key>
-			<string></string>
-			<key> 3D</key>
-			<string></string>
-		</dict>
+		<dict/>
 	</dict>
 	<key>Multikino</key>
 	<dict>
 		<key>title</key>
-		<dict>
-			<key>NORMALIOS BOBOS EINA OUT: </key>
-			<string></string>
-			<key>Multikinukas: </key>
-			<string></string>
-			<key>MultiBabyKino: </key>
-			<string></string>
-		</dict>
+		<dict/>
 		<key>originalTitle</key>
-		<dict>
-			<key>Baltic Tribes. The Last Pagans of Europe</key>
-			<string>Baltu Ciltis</string>
-			<key>Boy 2</key>
-			<string>Brahms: The Boy II</string>
-			<key>ЛЁД 2</key>
-			<string>Ice 2</string>
-			<key>Emma</key>
-			<string>Emma.</string>
-			<key>Holop</key>
-			<string>Kholop</string>
-			<key>Grudge  2020</key>
-			<string>The Grudge</string>
-			<key>Frozen 2</key>
-			<string>Frozen II</string>
-			<key>MultiBabyKino: </key>
-			<string></string>
-		</dict>
+		<dict/>
 	</dict>
 </dict>
 </plist>
